2009-01-22  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac: Remove libhildondesktop1 dependency. Add gnome-vfs
	  dependency.

	* debian/changelog: Update.

	* src/mb/hd-desktop.c (hd_desktop_destroy, hd_desktop_init,
	  current_theme_changed):
	* src/mb/hd-desktop.h: Monitor /etc/hildon/theme for theme changes.
	  Fixes NB#98196, NB#98302

2009-01-21  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Add a single define for the default icon, update it to spec.

	* src/launcher/hd-launcher-item.c:
	* src/launcher/hd-launcher-page.c:
	* src/launcher/hd-launcher-tile.c:
	* src/launcher/hd-launcher.h:

2009-01-21  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c
	* src/home/hd-render-manager.h:
	  Added HDRM_STATE_HOME_EDIT_DLG state for home edit dialogs
	* src/mb/hd-comp-mgr.c:
	  Added code to change to and from HDRM_STATE_HOME_EDIT_DLG
	  at the correct times to allow us to return to the home edit
	  mode.

2009-01-21  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Localized applications.desktop.

	* data/desktop/applications.desktop:

2009-01-21  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update. NB#98807 is fixed.

2009-01-21  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/tidy-blur-group.c
	* src/tidy/tidy-blur-group.h:
	  Added a convenience function to see if a blur group is actually 
	  buffering the picture of it's children
	* src/mb/hd-comp-mgr.c:
	  Changes to do a full-screen update and kick the blur actor if an
	  actor that is blurred needs update. Fix for 98298

2009-01-21  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home.c (SETTINGS_BUTTON, applet_settings_button,
	  hd_home_applet_close_button_clicked,
	  hd_home_applet_settings_button_clicked, hd_home_constructed,
	  hd_home_show_applet_buttons, hd_home_hide_applet_buttons): Add
	  support for the settings button.

	* src/mb/hd-atoms.c (hd_atoms_init):