@@ -6,4 +6,4 @@ DEB_DH_STRIP_ARGS := --dbg-package=hildon-desktop
 DEB_DH_INSTALLINIT_ARGS := --no-start -- start 51 2 3 4 . stop 20 0 1 5 6 .
 
 makebuilddir/hildon-desktop::
-	./autogen.sh --prefix=/usr
+	./autogen.sh --prefix=/usr --sysconfdir=/etc
