@@ -1,0 +1,2 @@
+#!/bin/sh
+rm -rf $HOME/.config/hildon-desktop
