@@ -16,6 +16,8 @@ hildon-desktop (1:2.2.17-1~unreleased) unstable; urgency=low
   * Close the status menu if any window (except an applet) is mapped.
   * Respect GConf default value for view key for applets. Fixes NB#98719
   * Monitor /etc/hildon/theme for theme changes. Fixes NB#98196, NB#98302
+  * Add scripts to clear user data and reset to factory settings. Fixes
+    NB#98971
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 13 Jan 2009 17:15:00 +0200
 
